# Trending-Project-Recommendations

./: ABOUT.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: collect-daily.yml  publish-weekly.yml
data/snapshots/: 2026-04-12.json  2026-04-13.json  2026-04-14.json  2026-04-15.json  2026-04-16.json  2026-04-17.json  2026-04-18.json  2026-04-19.json  2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-04-23.json  2026-04-24.json  2026-04-25.json  2026-04-26.json  2026-04-27.json  2026-04-28.json  2026-04-29.json  2026-04-30.json  2026-05-01.json  2026-05-02.json  2026-05-03.json  2026-05-04.json  2026-05-05.json  2026-05-06.json  2026-05-07.json  2026-05-08.json  2026-05-09.json  2026-05-10.json  2026-05-11.json  2026-05-12.json  2026-05-13.json  2026-05-14.json  2026-05-15.json  2026-05-16.json  2026-05-17.json  2026-05-18.json  2026-05-19.json  2026-05-20.json  2026-05-21.json  (+63 more)
data/weekly/: 2026-W16-synthesis.json  2026-W16.json  2026-W19-synthesis.json  2026-W19.json  2026-W20-synthesis.json  2026-W20.json  2026-W21-synthesis.json  2026-W21.json  2026-W22-synthesis.json  2026-W22.json  2026-W23-synthesis.json  2026-W23.json  2026-W24-synthesis.json  2026-W24.json  2026-W25-synthesis.json  2026-W25.json  2026-W26-synthesis.json  2026-W26.json  2026-W27-synthesis.json  2026-W27.json  (+4 more)
history/: 2026-W16.md  2026-W19.md  2026-W24.md  2026-W26.md  2026-W27.md
src/: aggregator.py  models.py  renderer.py  scraper.py  storage.py  synthesizer.py
templates/: readme.md.j2
tests/: test_aggregator.py  test_models.py  test_scraper.py
(+1 files in other folders)
